 $Id: ChangeLog,v 1.113.2.23 2006/08/31 10:09:22 uehira Exp $

2006-08-29  Shigeki Nakagawa  <nakagawa@eri.u-tokyo.ac.jp>
	* src/win.c: fixed a bug in locate (by Uehira-san).
	             fixed a bug reading pickfile.
	             add Expert mode option.
	              -za autpk/evdet has no effect w/o shift-key
	              -zc not display calculated travel-times
	              -zac both above
	* Version 1.1.80 released.

2006-05-08  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* udp_dest.c : bug fixed.
	* imported experimental codes
	  winrawsrvd : raw data server started by inetd.
	  winrawcli_test : test code of raw data client.
	* Version 1.1.79 released.
	
2006-03-27  Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
	* wintowin: BUG FIX (appealed by T. UEMURA)
	* Version 1.1.78 released.

2006-03-25  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* win2raw: check data was processed or not. (appealed by T. UEMURA)

2006-03-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* win2raw: added new mode in '-m' option.
	* Version 1.1.77 released.

2006-02-09  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* check mkdtemp(3)
	* Version 1.1.76 released.

2006-01-19  Shigeki Nakagawa  <nakagawa@eri.u-tokyo.ac.jp>
	* src/win.c: fixed a bug in searching channel (line#6237)
	* Version 1.1.75 released.

2005-12-19 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
        * win.c : fixed a bug in picking S (line#3803)
	* Version 1.1.74 released.

2005-09-26 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* send_raw.c : don't resend packet more than once (for broadcast)
	* recvt.c : introduced delayed resend-request (-y)
		host:port pair is acceptable in  ctlfile
	* Version 1.1.73 released.

2005-08-10 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* win.c/events.c/fromtape.c/pmon.c/rtape.c/wdisk.c/wdiskts.c/wtape.c/
	  find_picks.c : bug in strcmp2()/strncmp2() fixed : 0-6 > 7-9
	* Version 1.1.72 released.

2005-07-27 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* win.c : bug in plot_mon() fixed.