@@ -1,4 +1,7 @@
- $Id: ChangeLog,v 1.113.2.23 2006/08/31 10:09:22 uehira Exp $
+ $Id: ChangeLog,v 1.113.2.24 2006/09/02 01:52:32 uehira Exp $
+
+2006-09-2  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
+	* src/send_raw.c: added 'no resend' mode (-R)
 
 2006-08-29  Shigeki Nakagawa  <nakagawa@eri.u-tokyo.ac.jp>
 	* src/win.c: fixed a bug in locate (by Uehira-san).
